--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <div class="card hidden" id="loveCard">
     <div class="love-page">
       <!-- Your image -->
-      <img src="love-image.jpg" alt="Love Image">
+      <img src="love-image.jpeg" alt="Love Image">
 
       <div class="love-title">I love you, Mari Chan Chan ❤️</div>
       <div class="love-message">
